--- a/jerez-bio.html
+++ b/jerez-bio.html
@@ -12,8 +12,7 @@
         <h1>Contact</h1>
     </header>
 
-    <h2>Adrian Jerez, Syracuse University</h2>
+    <h2>My name is Adrian Jerez and I am a Junior at Syracuse University</h2>
     <p>
-        Booth Hall 412<br>
-        Syracuse, NY 13244
+        I am a current IMT major with a minor in finance! I am also the chapter president of a fraternity! I love to read books and watch horror movies. I also love trying new foods from different countries.<br>
     </p>
