--- a/jerez-bio.html
+++ b/jerez-bio.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>Contact</h1>
+        <h1>Professional Introduction</h1>
     </header>
 
     <h2>My name is Adrian Jerez and I am a Junior at Syracuse University</h2>
